--- a/templates/ports.html
+++ b/templates/ports.html
@@ -117,6 +117,11 @@
 
                     });
                 });
+                $('#btn-cancel-fire').click(function(){
+                    $.post('/fire', {'group_id': {{ selected_group['id'] }}, 'cancel': 'true'}, function(m){
+
+                    });
+                });
             {% end %}
         });
 
